@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class Circle {
    }
  }
  

  namespace  {
    class Counter {
        {static} + count2DShapes()
    }
  }
  

  namespace  {
    class Cube {
    }
  }
  

  namespace  {
    class Shape {
    }
  }
  

  namespace  {
    class Shape2D {
    }
  }
  

  namespace  {
    class Shape2DSub1 {
    }
  }
  

  namespace  {
    class Shape2DSub2 {
    }
  }
  

  namespace  {
    class Shape3D {
    }
  }
  

  namespace  {
    class Shape3DSub1 {
    }
  }
  

  namespace  {
    class Shape3DSub2 {
    }
  }
  

  Circle -up-|> Shape2D
  Cube -up-|> Shape3D
  Shape2D -up-|> Shape
  Shape2DSub1 -up-|> Shape2D
  Shape2DSub2 -up-|> Shape2D
  Shape3D -up-|> Shape
  Shape3DSub1 -up-|> Shape3D
  Shape3DSub2 -up-|> Shape3D


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
